# language-server

./: Cargo.toml  build.sh  calcagebra-0.0.1.vsix  example.cal
editors/vscode/: README.md  calcagebra-0.0.1.vsix  calcagebra-1.0.0.vsix  calcagebra-2.0.0.vsix  calcagebra-2.0.1.vsix  calcagebra-2.1.0.vsix  language-configuration.json  package.json  syntax.json
editors/vscode/src/: main.ts
editors/vscode/syntaxes/: calcagebra.tmLanguage.json
src/: ast.rs  main.rs  parser.rs  standardlibrary.rs  token.rs  types.rs
src/standardlibrary/: mod.rs
