[package]
name = "calcagebra"
version = "1.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20.0"

[profile.release]
strip = true
opt-level = "z"

[profile.dev]
opt-level = 3
debug = true
