[package]
name = "calcagebra-ls"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.0.1"
serde_json = "1.0.118"
simsearch = "0.2.5"
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
opt-level = "z"

[profile.dev]
opt-level = 3
debug = true
